src/objects/Comparable__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Comparable_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Opportunity__c</fullName>
        <label>Base_Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comparables</relationshipLabel>
        <relationshipName>Comparables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Comparable_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comparable_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comparable_Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Comparables (Comparable_Opportunity)</relationshipLabel>
        <relationshipName>Comparables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comparable_opp_Name__c</fullName>
        <description>Comparable_Opportunity__r.name</description>
        <formula>Comparable_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comparable_opp_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(Comparable_Opportunity__r.Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <label>Comparable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Comparable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comparables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>